@@ -4,12 +4,13 @@ import jakarta.transaction.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import mate.academy.intro.dto.CreateOrderRequestDto;
 import mate.academy.intro.dto.OrderItemResponseDto;
 import mate.academy.intro.dto.OrderResponseDto;
 import mate.academy.intro.dto.UpdateOrderStatusRequestDto;
+import mate.academy.intro.exception.EntityNotFoundException;
+import mate.academy.intro.exception.OrderProcessingException;
 import mate.academy.intro.mapper.OrderItemMapper;
 import mate.academy.intro.mapper.OrderMapper;
 import mate.academy.intro.model.CartItem;
@@ -42,40 +43,22 @@ public class OrderServiceImpl implements OrderService {
     @Transactional
     public OrderResponseDto placeOrder(Long userId, CreateOrderRequestDto requestDto) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "User not found with id: " + userId));
 
         ShoppingCart cart = cartRepository.findByUserId(userId)
-                .orElseThrow(() -> new RuntimeException("Shopping cart not found"));
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Shopping cart not found for user with id: " + userId));
 
         if (cart.getCartItems().isEmpty()) {
-            throw new RuntimeException("Shopping cart is empty");
+            throw new OrderProcessingException(
+                    "Cannot place order: shopping cart is empty for user with id: " + userId);
         }
 
-        Order order = new Order();
-        order.setUser(user);
-        order.setStatus(OrderStatus.PENDING);
-        order.setOrderDate(LocalDateTime.now());
-        order.setShippingAddress(requestDto.getShippingAddress());
-
-        BigDecimal total = BigDecimal.ZERO;
-
-        for (CartItem cartItem : cart.getCartItems()) {
-            OrderItem orderItem = new OrderItem();
-            orderItem.setBook(cartItem.getBook());
-            orderItem.setQuantity(cartItem.getQuantity());
-            orderItem.setPrice(cartItem.getBook().getPrice());
-            orderItem.setOrder(order);
-            order.getOrderItems().add(orderItem);
-
-            total = total.add(cartItem.getBook().getPrice()
-                    .multiply(BigDecimal.valueOf(cartItem.getQuantity())));
-        }
-
-        order.setTotal(total);
+        Order order = createOrderFromCart(user, cart, requestDto.getShippingAddress());
         orderRepository.save(order);
 
-        cart.getCartItems().clear();
-        cartRepository.save(cart);
+        clearShoppingCart(cart);
 
         return orderMapper.toDto(order);
     }
@@ -89,18 +72,25 @@ public class OrderServiceImpl implements OrderService {
     @Override
     public List<OrderItemResponseDto> getOrderItems(Long userId, Long orderId) {
         Order order = orderRepository.findByIdAndUserId(orderId, userId)
-                .orElseThrow(() -> new RuntimeException("Order not found or access denied"));
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Order not found with id: " + orderId + " for user with id: " + userId));
+
         return order.getOrderItems().stream()
                 .map(orderItemMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public OrderItemResponseDto getOrderItem(Long userId, Long orderId, Long itemId) {
         Order order = orderRepository.findByIdAndUserId(orderId, userId)
-                .orElseThrow(() -> new RuntimeException("Order not found or access denied"));
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Order not found with id: " + orderId + " for user with id: " + userId));
+
         OrderItem item = orderItemRepository.findByIdAndOrderId(itemId, order.getId())
-                .orElseThrow(() -> new RuntimeException("Order item not found"));
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Order item not found with id: "
+                                + itemId + " in order with id: " + orderId));
+
         return orderItemMapper.toDto(item);
     }
 
@@ -108,9 +98,51 @@ public class OrderServiceImpl implements OrderService {
     public OrderResponseDto updateOrderStatus(Long orderId,
                                               UpdateOrderStatusRequestDto requestDto) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Order not found with id: " + orderId));
+
         order.setStatus(requestDto.getStatus());
         orderRepository.save(order);
+
         return orderMapper.toDto(order);
+    }
+
+    private Order createOrderFromCart(User user, ShoppingCart cart, String shippingAddress) {
+        Order order = new Order();
+        order.setUser(user);
+        order.setStatus(OrderStatus.PENDING);
+        order.setOrderDate(LocalDateTime.now());
+        order.setShippingAddress(shippingAddress);
+
+        BigDecimal total = BigDecimal.ZERO;
+
+        for (CartItem cartItem : cart.getCartItems()) {
+            OrderItem orderItem = createOrderItem(cartItem, order);
+            order.getOrderItems().add(orderItem);
+            total = calculateItemTotal(total, cartItem);
+        }
+
+        order.setTotal(total);
+        return order;
+    }
+
+    private OrderItem createOrderItem(CartItem cartItem, Order order) {
+        OrderItem orderItem = new OrderItem();
+        orderItem.setBook(cartItem.getBook());
+        orderItem.setQuantity(cartItem.getQuantity());
+        orderItem.setPrice(cartItem.getBook().getPrice());
+        orderItem.setOrder(order);
+        return orderItem;
+    }
+
+    private BigDecimal calculateItemTotal(BigDecimal currentTotal, CartItem cartItem) {
+        BigDecimal itemTotal = cartItem.getBook().getPrice()
+                .multiply(BigDecimal.valueOf(cartItem.getQuantity()));
+        return currentTotal.add(itemTotal);
+    }
+
+    private void clearShoppingCart(ShoppingCart cart) {
+        cart.getCartItems().clear();
+        cartRepository.save(cart);
     }
 }
